# Vision-Based-Hand-Shadowing-for-Robotic-Manipulation-via-Inverse-Kinematics

./: .gitignore  CLAUDE.md  README.md  REVISION_PLAN.md  pyproject.toml
.claude/: settings.local.json
IEEE request/: email.md
IEEE_publication/: arxiv_upload_checklist.md  memo_professor_gomes.md  paper.tex  response_to_reviewers.tex
IEEE_publication/arxiv_preprint_upload/: paper_arxiv.tex
Professor request/: request.md
new experiment data (PID tuning sim vs real)/: chat.md
new experiment data (hand detection statistics)/: chat.md
new expirement data (actions histograms)/: chat.md
new submission/: Request for Byline Change.docx
new submission/Main Manuscript/: ieeeaccess.cls  paper.tex
paper_data/: ema_ablation.csv  endeffector_accuracy.csv  human_demo_actions.npy  human_demo_target_poses.npy  ik_target_error.csv  joint_saturation.csv  success_rate_stats.csv  target_poses.npz  trajectory_smoothness.csv
robot/: Dual_S101_Assembly.urdf
robot/meshes/: left_base.STL  left_gripper.STL  left_jaw.STL  left_lower_arm.STL  left_shoulder.STL  left_upper_arm.STL  left_wrist.STL  right_base.STL  right_gripper.STL  right_jaw.STL  right_lower_arm.STL  right_shoulder.STL  right_upper_arm.STL  right_wrist.STL
scripts/: compare_hand_detectors.py  compute_ema_ablation.py  compute_endeffector_error.py  compute_ik_target_error.py  compute_joint_saturation.py  compute_success_rate_stats.py  compute_trajectory_smoothness.py  plot_pertile_with_errorbars.py
src/vbhs/: __init__.py
src/vbhs/config/: config.py
src/vbhs/pipeline/: __init__.py  actions_pipeline.py  camera_input.py  control_command_estimation.py  hand_detection.py  hand_landmarks_correction.py  inverse_kinematics.py  joint_transformations.py  robot_arm_estimation.py  robot_gripper_estimation.py  transformations.py  types.py
src/vbhs/scripts/: __init__.py  action_playback.py  collect_and_replay.py  generate_actions_from_demo.py  playback_on_robot.py  realsense_mp4.py  record_from_glasses.py
src/vbhs/simulation/: __init__.py  simulator.py
(+10 files in other folders)
